RESOLVED FIXED295804
[JSC] OMG: exception catch does not need to preserve non-inlineParent expressionStack
https://bugs.webkit.org/show_bug.cgi?id=295804
Summary [JSC] OMG: exception catch does not need to preserve non-inlineParent express...
Dan Hecht
Reported 2025-07-11 13:03:11 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-07-11 13:03:23 PDT
Dan Hecht
Comment 2 2025-07-11 13:10:09 PDT
EWS
Comment 3 2025-07-14 09:22:42 PDT
Committed 297340@main (2cd059314f62): <https://commits.webkit.org/297340@main> Reviewed commits have been landed. Closing PR #47909 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.