[JSC] OMG: exception catch does not need to preserve non-inlineParent expressionStack https://bugs.webkit.org/show_bug.cgi?id=295804 rdar://155638688

Reviewed by NOBODY (OOPS!).

The logic to preserve the top-most expressionStack for inlineParents
is a bit overzealous and preserves the expressionStack
for the leaf frame. That's not necessary since these expressions
are popped from the stack before entering the catch handler, so
these expressions will be dead anyway inside the handler.

Also make the explicit for when the control block has an
exception variable associated with it, since these inlineParent
expressionStacks don't really have an associated entry in
the ControlStack.

Finally, factor out this non-trivial duplicated code into a function.