Source/JavaScriptCore/wasm/WasmOMGIRGenerator.cpp
@@ -868,10 +868,11 @@ private:
     void reloadMemoryRegistersFromInstance(const MemoryInformation&, Value* instance, BasicBlock*);
 
     Value* loadFromScratchBuffer(unsigned& indexInBuffer, Value* pointer, B3::Type);
-    void connectControlAtEntrypoint(unsigned& indexInBuffer, Value* pointer, ControlData&, Stack& expressionStack, ControlData& currentData, bool fillLoopPhis = false);
+    void connectControlAtEntrypoint(unsigned& indexInBuffer, Value* pointer, ControlData&, Stack& expressionStack, bool loadExceptionVar, bool fillLoopPhis = false);
     Value* emitCatchImpl(CatchKind, ControlType&, unsigned exceptionIndex = 0);
     void emitCatchTableImpl(ControlData& entryData, const ControlData::TryTableTarget&, const Stack&);
     PatchpointExceptionHandle preparePatchpointForExceptions(BasicBlock*, PatchpointValue*);
+    void connectValuesForCatchEntrypoint(ControlData& catchData, Value* pointer);
 
     Origin origin();
 
@@ -4162,7 +4163,7 @@ Value* OMGIRGenerator::loadFromScratchBuffer(unsigned& indexInBuffer, Value* poi
     return v;
 }
 
-void OMGIRGenerator::connectControlAtEntrypoint(unsigned& indexInBuffer, Value* pointer, ControlData& data, Stack& expressionStack, ControlData& currentData, bool fillLoopPhis)
+void OMGIRGenerator::connectControlAtEntrypoint(unsigned& indexInBuffer, Value* pointer, ControlData& data, Stack& expressionStack, bool loadExceptionVar, bool fillLoopPhis)
 {
     constexpr bool verbose = true;
 
@@ -4217,7 +4218,7 @@ void OMGIRGenerator::connectControlAtEntrypoint(unsigned& indexInBuffer, Value* 
     if (stackValueBlock)
         insertionSet.execute(stackValueBlock);
 
-    if (ControlType::isAnyCatch(data) && &data != &currentData) {
+    if (loadExceptionVar) {
         auto* load = loadFromScratchBuffer(indexInBuffer, pointer, pointerType());
         m_currentBlock->appendNew<VariableValue>(m_proc, Set, origin(), data.exception(), load);
         dataLogLnIf(verbose, "set exception=", *data.exception(), " to ", *load);
@@ -4272,11 +4273,12 @@ auto OMGIRGenerator::addLoop(BlockSignature signature, Stack& enclosingStack, Co
         for (unsigned controlIndex = 0; controlIndex < m_parser->controlStack().size(); ++controlIndex) {
             auto& data = m_parser->controlStack()[controlIndex].controlData;
             auto& expressionStack = m_parser->controlStack()[controlIndex].enclosedExpressionStack;
-            connectControlAtEntrypoint(indexInBuffer, pointer, data, expressionStack, block);
+            ASSERT(&data != &block);
+            connectControlAtEntrypoint(indexInBuffer, pointer, data, expressionStack, ControlType::isAnyCatch(data));
             if (Options::useWasmIPInt() && ControlType::isTry(data))
                 ++indexInBuffer;
         }
-        connectControlAtEntrypoint(indexInBuffer, pointer, block, enclosingStack, block);
+        connectControlAtEntrypoint(indexInBuffer, pointer, block, enclosingStack, false);
 
         for (unsigned i = 0; i < newStack.size(); i++) {
             TypedExpression& value = newStack[i];
@@ -4409,6 +4411,7 @@ auto OMGIRGenerator::addCatch(unsigned exceptionIndex, const TypeDefinition& sig
     return addCatchToUnreachable(exceptionIndex, signature, data, results);
 }
 
+// Must be kept in sync with connectValuesForCatchEntrypoint.
 PatchpointExceptionHandle OMGIRGenerator::preparePatchpointForExceptions(BasicBlock* block, PatchpointValue* patch)
 {
     advanceCallSiteIndex();
@@ -4441,14 +4444,46 @@ PatchpointExceptionHandle OMGIRGenerator::preparePatchpointForExceptions(BasicBl
             if (ControlType::isAnyCatch(data))
                 liveValues.append(get(block, data.exception()));
         }
-        for (Value* value : currentFrame->m_parser->expressionStack())
-            liveValues.append(value);
+        // inlineParent frames only
+        if (currentFrame != this) {
+            for (Value* value : currentFrame->m_parser->expressionStack())
+                liveValues.append(value);
+        }
     }
 
     patch->effects.exitsSideways = true;
     patch->appendVectorWithRep(liveValues, ValueRep::LateColdAny);
 
     return { m_hasExceptionHandlers, callSiteIndex(), static_cast<unsigned>(liveValues.size()), firstStackmapParamOffset, firstStackmapChildOffset };
+}
+
+// Must be kept in sync with preparePatchpointForExceptions.
+void OMGIRGenerator::connectValuesForCatchEntrypoint(ControlData& catchData, Value* pointer)
+{
+    unsigned indexInBuffer = 0;
+
+    Vector<OMGIRGenerator*> frames;
+    for (auto* currentFrame = this; currentFrame; currentFrame = currentFrame->m_inlineParent)
+        frames.append(currentFrame);
+    frames.reverse();
+
+    for (auto* currentFrame : frames) {
+        for (auto& local : currentFrame->m_locals)
+            m_currentBlock->appendNew<VariableValue>(m_proc, Set, Origin(), local, loadFromScratchBuffer(indexInBuffer, pointer, local->type()));
+
+        for (unsigned controlIndex = 0; controlIndex < currentFrame->m_parser->controlStack().size(); ++controlIndex) {
+            auto& controlData = currentFrame->m_parser->controlStack()[controlIndex].controlData;
+            auto& expressionStack = currentFrame->m_parser->controlStack()[controlIndex].enclosedExpressionStack;
+            bool loadExceptionVar = ControlType::isAnyCatch(controlData) && &controlData != &catchData;
+            connectControlAtEntrypoint(indexInBuffer, pointer, controlData, expressionStack, loadExceptionVar);
+        }
+        // inlineParent frames only
+        if (currentFrame != this) {
+            auto& topControlData = currentFrame->m_parser->controlStack().last().controlData;
+            auto& topExpressionStack = currentFrame->m_parser->expressionStack();
+            connectControlAtEntrypoint(indexInBuffer, pointer, topControlData, topExpressionStack, false);
+        }
+    }
 }
 
 auto OMGIRGenerator::addCatchToUnreachable(unsigned exceptionIndex, const TypeDefinition& signature, ControlType& data, ResultList& results) -> PartialResult
@@ -4507,28 +4542,7 @@ Value* OMGIRGenerator::emitCatchImpl(CatchKind kind, ControlType& data, unsigned
     Value* exception = m_currentBlock->appendNew<ArgumentRegValue>(m_proc, Origin(), GPRInfo::argumentGPR1);
     Value* buffer = m_currentBlock->appendNew<ArgumentRegValue>(m_proc, Origin(), GPRInfo::argumentGPR2);
 
-    unsigned indexInBuffer = 0;
-
-    Vector<OMGIRGenerator*> frames;
-    for (auto* currentFrame = this; currentFrame; currentFrame = currentFrame->m_inlineParent)
-        frames.append(currentFrame);
-    frames.reverse();
-
-    for (auto* currentFrame : frames) {
-        for (auto& local : currentFrame->m_locals)
-            m_currentBlock->appendNew<VariableValue>(m_proc, Set, Origin(), local, loadFromScratchBuffer(indexInBuffer, pointer, local->type()));
-
-        for (unsigned controlIndex = 0; controlIndex < currentFrame->m_parser->controlStack().size(); ++controlIndex) {
-            auto& controlData = currentFrame->m_parser->controlStack()[controlIndex].controlData;
-            auto& expressionStack = currentFrame->m_parser->controlStack()[controlIndex].enclosedExpressionStack;
-            connectControlAtEntrypoint(indexInBuffer, pointer, controlData, expressionStack, data);
-        }
-
-        auto& topControlData = currentFrame->m_parser->controlStack().last().controlData;
-        auto& topExpressionStack = currentFrame->m_parser->expressionStack();
-        RELEASE_ASSERT(currentFrame != this || topExpressionStack.isEmpty());
-        connectControlAtEntrypoint(indexInBuffer, pointer, topControlData, topExpressionStack, data);
-    }
+    connectValuesForCatchEntrypoint(data, pointer);
 
     set(data.exception(), exception);
     TRACE_CF("CATCH");
@@ -4568,28 +4582,7 @@ auto OMGIRGenerator::emitCatchTableImpl(ControlData& data, const ControlData::Tr
     Value* exception = m_currentBlock->appendNew<ArgumentRegValue>(m_proc, Origin(), GPRInfo::argumentGPR1);
     Value* buffer = m_currentBlock->appendNew<ArgumentRegValue>(m_proc, Origin(), GPRInfo::argumentGPR2);
 
-    unsigned indexInBuffer = 0;
-
-    Vector<OMGIRGenerator*> frames;
-    for (auto* currentFrame = this; currentFrame; currentFrame = currentFrame->m_inlineParent)
-        frames.append(currentFrame);
-    frames.reverse();
-
-    for (auto* currentFrame : frames) {
-        for (auto& local : currentFrame->m_locals)
-            m_currentBlock->appendNew<VariableValue>(m_proc, Set, Origin(), local, loadFromScratchBuffer(indexInBuffer, pointer, local->type()));
-
-        for (unsigned controlIndex = 0; controlIndex < currentFrame->m_parser->controlStack().size(); ++controlIndex) {
-            auto& controlData = currentFrame->m_parser->controlStack()[controlIndex].controlData;
-            auto& expressionStack = currentFrame->m_parser->controlStack()[controlIndex].enclosedExpressionStack;
-            connectControlAtEntrypoint(indexInBuffer, pointer, controlData, expressionStack, data);
-        }
-
-        auto& topControlData = currentFrame->m_parser->controlStack().last().controlData;
-        auto& topExpressionStack = currentFrame->m_parser->expressionStack();
-        //RELEASE_ASSERT(currentFrame != this || topExpressionStack.isEmpty());
-        connectControlAtEntrypoint(indexInBuffer, pointer, topControlData, topExpressionStack, data);
-    }
+    connectValuesForCatchEntrypoint(data, pointer);
 
     auto newStack = stack;
 
